# fraculation-leaderboard

./: Cargo.toml  README.md  deploy.sh  gen_spec.sh
doc/: openapi2.json  openapi3.yml
migrations/: 0001_games_and_leaderboards.sql  0002_game_sort_mode.sql  0003_leaderboard_user_id.sql
src/: app_state.rs  gen_openapi.rs  lib.rs  main.rs  models.rs  openapi.rs  router.rs
src/hetero_req_resp/: heterogeneous_request.rs  heterogeneous_response.rs  mod.rs
src/leaderboard/: heterogenous_response.rs  mod.rs  models.rs  routes.rs  templates.rs
src/tests/: game_crud.rs  leaderboard_user_ids.rs  mod.rs  my_test_server.rs  posgres_container.rs  postgres.rs
src/todo/: mod.rs  models.rs  routes.rs  templates.rs
templates/: base.html  index.html
templates/leaderboard/: game.html  game_entries.html  game_entry_row.html  games.html  index.html  leaderboard.html  leaderboard_entries.html  stream.html  stream_page.html
templates/todo/: index.html  stream.html  todo.html
tests/: game_crud.rs  leaderboard_user_ids.rs
tests/common/: mod.rs  my_test_server.rs  test_models.rs
