[package]
name = "fraculation-leaderboard"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.4"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
shuttle-axum = "0.43.0"
shuttle-runtime = "0.43.0"
shuttle-shared-db = { version = "0.43.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
thiserror = "1.0.58"
tokio = "1.28.2"
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower-http = { version = "0.5.2", features = ["cors"] }
log = "0.4.21"
utoipa = { version = "4.2.0", features = ["uuid"] }
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
axum-test = "14.8.0"
once_cell = "1.19.0"
rand = "0.8.5"
testcontainers = "0.15.0"
testcontainers-modules = { version = "0.3.7", features = ["postgres"] }
